force-app/main/default/objects/Visit__c/Visit__c.object-meta.xml
<CustomObject>
    <label>Visit</label>
    <pluralLabel>Visits</pluralLabel>
    <nameField>
        <label>Visit Number</label>
        <type>AutoNumber</type>
        <displayFormat>VIS-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Individual outlet visit execution tracking with geo-location, duration and productivity metrics (MOD-04 Outlet Visit Execution)</description>
</CustomObject>