force-app/main/default/objects/Visit__c/fields/Ad_Hoc_Reason__c.field-meta.xml
<CustomField>
    <fullName>Ad_Hoc_Reason__c</fullName>
    <description>Reason for conducting an ad-hoc visit outside the planned journey plan. Required when Is_Ad_Hoc__c is true.</description>
    <label>Ad-Hoc Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Outlet</fullName>
            </value>
            <value>
                <fullName>Urgent Order</fullName>
            </value>
            <value>
                <fullName>Manager Request</fullName>
            </value>
            <value>
                <fullName>Market Intelligence</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>