force-app/main/default/objects/Visit__c/fields/Beat_Switch_Reason__c.field-meta.xml
<CustomField>
    <fullName>Beat_Switch_Reason__c</fullName>
    <description>Reason for switching to a different beat during the day.</description>
    <label>Beat Switch Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Road Block</fullName>
            </value>
            <value>
                <fullName>Weather Conditions</fullName>
            </value>
            <value>
                <fullName>Manager Instructions</fullName>
            </value>
            <value>
                <fullName>Market Emergency</fullName>
            </value>
            <value>
                <fullName>Vehicle Issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>