force-app/main/default/objects/Visit__c/fields/Check_In_Battery__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Battery__c</fullName>
    <label>Check-In Battery Level</label>
    <type>Text</type>
    <length>20</length>
    <description>Device battery level at check-in time</description>
</CustomField>