force-app/main/default/objects/Visit__c/fields/Check_In_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Latitude__c</fullName>
    <label>Check-In Latitude</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>