force-app/main/default/objects/Visit__c/fields/Check_In_Long__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Long__c</fullName>
    <label>[Deprecated] Check In Longitude</label>
    <description>DEPRECATED: Use Check_In_Longitude__c instead. This field is retained for backward compatibility with legacy integrations. Migrate references to Check_In_Longitude__c.</description>
    <type>Number</type>
    <precision>10</precision>
    <scale>7</scale>
</CustomField>