force-app/main/default/objects/Visit__c/fields/Check_In_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Longitude__c</fullName>
    <label>Check-In Longitude</label>
    <precision>10</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>