force-app/main/default/objects/Visit__c/fields/Check_In_Network__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Network__c</fullName>
    <label>Check-In Network Status</label>
    <type>Text</type>
    <length>20</length>
    <description>Network connectivity status at check-in (Online/Offline)</description>
</CustomField>