force-app/main/default/objects/Visit__c/fields/Check_In_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Photo_URL__c</fullName>
    <label>Check-In Photo URL</label>
    <type>Url</type>
    <description>Photo captured at outlet check-in</description>
</CustomField>