force-app/main/default/objects/Visit__c/fields/Check_Out_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Accuracy__c</fullName>
    <label>Check-Out GPS Accuracy</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
    <description>GPS accuracy in meters at check-out</description>
</CustomField>