force-app/main/default/objects/Visit__c/fields/Check_Out_Long__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Long__c</fullName>
    <label>[Deprecated] Check Out Longitude</label>
    <description>DEPRECATED: Use Check_Out_Longitude__c instead if available, or create one. This field is retained for backward compatibility. Migrate references to the canonical field.</description>
    <type>Number</type>
    <precision>10</precision>
    <scale>7</scale>
</CustomField>