force-app/main/default/objects/Visit__c/fields/Check_Out_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Photo_URL__c</fullName>
    <label>Check-Out Photo URL</label>
    <type>Url</type>
    <description>Photo captured at outlet check-out</description>
</CustomField>