force-app/main/default/objects/Visit__c/fields/Collection_Amount__c.field-meta.xml
<CustomField>
    <fullName>Collection_Amount__c</fullName>
    <label>Collection Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <defaultValue>0</defaultValue>
</CustomField>