force-app/main/default/objects/Visit__c/fields/Competitor_Check_Completed__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Check_Completed__c</fullName>
    <label>Competitor Check Completed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether competitor activity was logged during this visit</description>
</CustomField>