force-app/main/default/objects/Visit__c/fields/Completion_Activities__c.field-meta.xml
<CustomField>
    <fullName>Completion_Activities__c</fullName>
    <label>Completion Activities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Order Taken</fullName>
            </value>
            <value>
                <fullName>Payment Collected</fullName>
            </value>
            <value>
                <fullName>Merchandising Done</fullName>
            </value>
            <value>
                <fullName>Survey Completed</fullName>
            </value>
            <value>
                <fullName>Returns Processed</fullName>
            </value>
            <value>
                <fullName>Scheme Communicated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Activities completed during the visit</description>
</CustomField>