force-app/main/default/objects/Visit__c/fields/Day_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Day_Attendance__c</fullName>
    <label>Day Attendance</label>
    <type>Lookup</type>
    <referenceTo>Day_Attendance__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>