force-app/main/default/objects/Visit__c/fields/Deviation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Deviation_Reason__c</fullName>
    <description>Detailed reason for deviating from the planned journey. Supports longer descriptions for compliance tracking.</description>
    <label>Deviation Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>