force-app/main/default/objects/Visit__c/fields/Distance_To_Outlet__c.field-meta.xml
<CustomField>
    <fullName>Distance_To_Outlet__c</fullName>
    <label>Distance To Outlet</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>2</scale>
    <description>Calculated distance in meters from check-in location to outlet registered location</description>
</CustomField>