force-app/main/default/objects/Visit__c/fields/Geo_Fence_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Geo_Fence_Override_Reason__c</fullName>
    <label>Geo-Fence Override Reason</label>
    <type>Text</type>
    <length>255</length>
    <description>Reason for overriding geo-fence restriction when check-in is outside allowed radius</description>
</CustomField>