force-app/main/default/objects/Visit__c/fields/Is_Ad_Hoc__c.field-meta.xml
<CustomField>
    <fullName>Is_Ad_Hoc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this is an ad-hoc/unplanned visit not part of the original journey plan. Auto-set by the BPM_Visit_AdHoc_Detection flow when Is_Planned__c is false.</description>
    <label>Is Ad-Hoc Visit</label>
    <type>Checkbox</type>
</CustomField>