force-app/main/default/objects/Visit__c/fields/Is_Geo_Fenced__c.field-meta.xml
<CustomField>
    <fullName>Is_Geo_Fenced__c</fullName>
    <label>Geo-Fence Validated</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the check-in passed geo-fence validation</description>
</CustomField>