force-app/main/default/objects/Visit__c/fields/Is_Productive__c.field-meta.xml
<CustomField>
    <fullName>Is_Productive__c</fullName>
    <label>Is Productive</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>