force-app/main/default/objects/Visit__c/fields/Is_Rescheduled__c.field-meta.xml
<CustomField>
    <fullName>Is_Rescheduled__c</fullName>
    <description>Indicates whether this visit was created as a reschedule of a missed visit.</description>
    <defaultValue>false</defaultValue>
    <label>Is Rescheduled</label>
    <type>Checkbox</type>
</CustomField>