force-app/main/default/objects/Visit__c/fields/Journey_Plan_Day__c.field-meta.xml
<CustomField>
    <fullName>Journey_Plan_Day__c</fullName>
    <label>Journey Plan Day</label>
    <type>Lookup</type>
    <referenceTo>Journey_Plan_Day__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>