force-app/main/default/objects/Visit__c/fields/Merchandising_Completed__c.field-meta.xml
<CustomField>
    <fullName>Merchandising_Completed__c</fullName>
    <label>Merchandising Completed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether merchandising activities were completed during this visit</description>
</CustomField>