force-app/main/default/objects/Visit__c/fields/Missed_Notes__c.field-meta.xml
<CustomField>
    <fullName>Missed_Notes__c</fullName>
    <description>Additional notes when a visit is marked as missed.</description>
    <label>Missed Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>