force-app/main/default/objects/Visit__c/fields/Missed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Missed_Reason__c</fullName>
    <description>Reason for marking a visit as missed. Required when visit status is Missed.</description>
    <label>Missed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shop Closed</fullName>
            </value>
            <value>
                <fullName>Owner Not Available</fullName>
            </value>
            <value>
                <fullName>Access Issue</fullName>
            </value>
            <value>
                <fullName>Weather Conditions</fullName>
            </value>
            <value>
                <fullName>Vehicle Breakdown</fullName>
            </value>
            <value>
                <fullName>Time Constraint</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>