force-app/main/default/objects/Visit__c/fields/Must_Sell_Products_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Must_Sell_Products_Ordered__c</fullName>
    <label>Must Sell Products Ordered</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>