force-app/main/default/objects/Visit__c/fields/Non_Productive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Non_Productive_Reason__c</fullName>
    <label>Non Productive Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>No Demand</fullName>
            </value>
            <value>
                <fullName>Credit Issue</fullName>
            </value>
            <value>
                <fullName>Owner Absent</fullName>
            </value>
            <value>
                <fullName>Visit Skipped</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>