force-app/main/default/objects/Visit__c/fields/Offline_Created__c.field-meta.xml
<CustomField>
    <fullName>Offline_Created__c</fullName>
    <label>Offline Created</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>