force-app/main/default/objects/Visit__c/fields/Original_Beat__c.field-meta.xml
<CustomField>
    <fullName>Original_Beat__c</fullName>
    <description>Stores the original beat before a beat switch occurred during the day.</description>
    <label>Original Beat</label>
    <type>Lookup</type>
    <referenceTo>Beat__c</referenceTo>
    <relationshipLabel>Original Beat Visits</relationshipLabel>
    <relationshipName>Original_Beat_Visits</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>