force-app/main/default/objects/Visit__c/fields/Original_Visit__c.field-meta.xml
<CustomField>
    <fullName>Original_Visit__c</fullName>
    <description>Reference to the original missed visit that this rescheduled visit replaces.</description>
    <label>Original Visit</label>
    <type>Lookup</type>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Rescheduled Visits</relationshipLabel>
    <relationshipName>Rescheduled_Visits</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>