force-app/main/default/objects/Visit__c/fields/Outlet__c.field-meta.xml
<CustomField>
    <fullName>Outlet__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Outlet</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Outlet Visits</relationshipLabel>
    <relationshipName>Outlet_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>