force-app/main/default/objects/Visit__c/fields/Reschedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Date__c</fullName>
    <description>Date to which this missed visit has been rescheduled.</description>
    <label>Reschedule Date</label>
    <type>Date</type>
</CustomField>