force-app/main/default/objects/Visit__c/fields/Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Salesperson__c</fullName>
    <label>Salesperson</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <required>true</required>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>