force-app/main/default/objects/Visit__c/fields/Stock_Check_Completed__c.field-meta.xml
<CustomField>
    <fullName>Stock_Check_Completed__c</fullName>
    <label>Stock Check Completed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether stock check was completed during this visit</description>
</CustomField>