force-app/main/default/objects/Visit__c/fields/Survey_Completed__c.field-meta.xml
<CustomField>
    <fullName>Survey_Completed__c</fullName>
    <label>Survey Completed</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a survey was completed during this visit</description>
</CustomField>