force-app/main/default/objects/Visit__c/fields/Sync_Time__c.field-meta.xml
<CustomField>
    <fullName>Sync_Time__c</fullName>
    <label>Sync Time</label>
    <type>DateTime</type>
</CustomField>