force-app/main/default/objects/Visit__c/fields/Ticket_Logged__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Logged__c</fullName>
    <label>Ticket Logged</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a ticket or complaint was logged during this visit</description>
</CustomField>