force-app/main/default/objects/Visit__c/fields/Total_Orders_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Orders_Count__c</fullName>
    <label>Total Orders Count</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Number of orders placed during this visit</description>
</CustomField>