force-app/main/default/objects/Visit__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visit_User</relationshipName>
    <type>Lookup</type>
</CustomField>