force-app/main/default/objects/Visit__c/validationRules/Checkout_After_Checkin.validationRule-meta.xml
<ValidationRule>
    <fullName>Checkout_After_Checkin</fullName>
    <active>true</active>
    <description>Check-Out Time must be after Check-In Time</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Check_Out_Time__c)), NOT(ISBLANK(Check_In_Time__c)), Check_Out_Time__c &lt; Check_In_Time__c)</errorConditionFormula>
    <errorDisplayField>Check_Out_Time__c</errorDisplayField>
    <errorMessage>Check-Out Time must be after Check-In Time.</errorMessage>
</ValidationRule>