force-app/main/default/objects/Visit__c/validationRules/Visit_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Visit_Date_Required</fullName>
    <active>true</active>
    <description>Visit date is required for all visits</description>
    <errorConditionFormula>ISBLANK(Visit_Date__c)</errorConditionFormula>
    <errorDisplayField>Visit_Date__c</errorDisplayField>
    <errorMessage>Visit Date is required.</errorMessage>
</ValidationRule>