force-app/main/default/objects/Visit__c/listViews/All_Visits.listView-meta.xml
<ListView>
    <fullName>All_Visits</fullName>
    <columns>NAME</columns>
    <columns>Salesperson__c</columns>
    <columns>Outlet__c</columns>
    <columns>Visit_Date__c</columns>
    <columns>Visit_Status__c</columns>
    <columns>Beat__c</columns>
    <columns>Is_Productive__c</columns>
    <columns>Check_In_Time__c</columns>
    <columns>Check_Out_Time__c</columns>
    <columns>Duration_Minutes__c</columns>
    <columns>Order_Value__c</columns>
    <columns>Collection_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Visits</label>
</ListView>