force-app/main/default/objects/Visit__c/listViews/Productive_Visits.listView-meta.xml
<ListView>
    <fullName>Productive_Visits</fullName>
    <columns>NAME</columns>
    <columns>Salesperson__c</columns>
    <columns>Outlet__c</columns>
    <columns>Visit_Date__c</columns>
    <columns>Beat__c</columns>
    <columns>Check_In_Time__c</columns>
    <columns>Check_Out_Time__c</columns>
    <columns>Duration_Minutes__c</columns>
    <columns>Order_Value__c</columns>
    <columns>Collection_Amount__c</columns>
    <columns>Total_Orders_Count__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Productive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Productive Visits</label>
</ListView>