force-app/main/default/objects/Visit__c/listViews/Skipped_Visits.listView-meta.xml
<ListView>
    <fullName>Skipped_Visits</fullName>
    <columns>NAME</columns>
    <columns>Salesperson__c</columns>
    <columns>Outlet__c</columns>
    <columns>Visit_Date__c</columns>
    <columns>Beat__c</columns>
    <columns>Missed_Reason__c</columns>
    <columns>Missed_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Visit_Status__c</field>
        <operation>equals</operation>
        <value>Skipped</value>
    </filters>
    <label>Skipped Visits</label>
</ListView>