force-app/main/default/objects/Visit__c/listViews/Todays_Visits.listView-meta.xml
<ListView>
    <fullName>Todays_Visits</fullName>
    <columns>NAME</columns>
    <columns>Salesperson__c</columns>
    <columns>Account__c</columns>
    <columns>Visit_Status__c</columns>
    <columns>Beat__c</columns>
    <columns>Is_Productive__c</columns>
    <columns>Check_In_Time__c</columns>
    <columns>Check_Out_Time__c</columns>
    <columns>Duration_Minutes__c</columns>
    <columns>Order_Value__c</columns>
    <columns>Collection_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Visit_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today's Visits</label>
</ListView>